# homodoro

./: .gitignore  LICENSE  README.md  cabal.project  default.nix  flake.nix  homodoro.cabal  homodoro.nix  nixpkgs.json  package.yaml  release.nix  sdl2-mixer.nix  shell.nix  stack.yaml
app/: Main.hs
src/: Config.hs  Notify.hs  Persistence.hs  Process.hs  Resources.hs  SDL.hs  Task.hs  Timer.hs  Types.hs  UI.hs  Util.hs
src/Task/: File.hs  Task.hs
src/UI/: App.hs  Attributes.hs  Config.hs  EventHandler.hs  Task.hs  Timer.hs  UI.hs  Util.hs
