cabal-version: 1.12

name:           homodoro
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/c0nradLC/homodoro#readme>
homepage:       https://github.com/c0nradLC/homodoro#readme
bug-reports:    https://github.com/c0nradLC/homodoro/issues
author:         Leonardo Palhano Conrado
maintainer:     l.conrado10@gmail.com
copyright:      2024 Leonardo Conrado
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/c0nradLC/homodoro

executable homodoro
  main-is: Main.hs
  other-modules:
      UI
      UI.Attributes
      UI.Timer
      UI.EventHandler
      UI.Config
      UI.Task
      Task
      Notify
      Resources
      Config
      Util
  hs-source-dirs:
      app
     ,src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson <3
    , base >=4.7 && <5
    , brick <2
    , bytestring <1
    , data-default-class <1
    , directory <= 1.3.6.2
    , file-embed <0.1
    , filepath <2
    , lens <6
    , mtl <3
    , sdl2 <3
    , sdl2-mixer <2
    , temporary <2
    , text <3
    , vector <1
    , vty <6.0
    , libnotify <2
  default-language: Haskell2010
