cabal-version: 1.12

name:           homodoro
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/c0nradLC/homodoro#readme>
homepage:       https://github.com/c0nradLC/homodoro#readme
bug-reports:    https://github.com/c0nradLC/homodoro/issues
author:         Leonardo Palhano Conrado
maintainer:     l.conrado10@gmail.com
copyright:      2025 Leonardo Conrado
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/c0nradLC/homodoro

executable homodoro
  main-is: Main.hs
  other-modules:
      UI
      UI.Attributes
      UI.Timer
      UI.EventHandler
      UI.Config
      UI.Task
      Task
      Types
      Config
      Notify
      SDL
      Persistence
  hs-source-dirs:
      app
     ,src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson <3
    , base >=4.7 && <5
    , brick <2
    , text <1.3
    , bytestring <= 0.11.4.0
    , directory <= 1.3.6.2
    , filepath <2
    , lens <6
    , mtl <3
    , vector <1
    , vty <6.0
    , libnotify <=0.2.1
    , sdl2-mixer <=1.2.0.0
    , containers <= 0.6.5.1
    , time <= 1.11.1.1
  default-language: Haskell2010
